# RMessenger

./: .Rbuildignore  .gitignore  .gitmodules  CMakeLists.txt  DESCRIPTION  NAMESPACE  README.md  configure  configure.ac  init.sh
R/: check_retval.fun.R  digest_md5.fun.R  facebookMessage.function.R  facebook_message.fun.R  gen_string.fun.R  parse_challenge.fun.R  parse_str.fun.R  sendXMPPMessage.function.R  xmpp_auth_sasl_digest_md5.fun.R  xmpp_message_generator.fun.R  zzz.R
inst/: COPYRIGHTS
man/: XMPPNotifier-package.Rd  XMPP_LEVEL_DEBUG.Rd  XMPP_LEVEL_ERROR.Rd  XMPP_LEVEL_INFO.Rd  XMPP_LEVEL_WARN.Rd  facebookMessage.Rd  facebook_message.Rd  sendXMPPMessage.Rd  xmpp_auth_sasl_digest_md5.Rd  xmpp_message_generator.Rd
src/: Agent.cpp  Agent.h  ConnListener.cpp  ConnListener.h  Connection.cpp  Connection.h  Ctx.cpp  Ctx.h  FacebookAgent.cpp  FacebookAgent.h  Handler.cpp  Handler.h  Log.h  Makevars.in  Makevars.win  RAgent.cpp  RAgent.h  Stz.cpp  Stz.h  XMPP.Module.cpp  XMPP.cpp  XMPP.h  XMPP.init.c  XMPPNotifier.RcppModule.h  XMPPNotifier.Rfunction.h  XMPPNotifier.cpp  XMPPNotifier.h  strophe.h
src/gloox-1.0/: .gitignore  ChangeLog  Doxyfile  Makefile.in  README.symbian  UPGRADING  bld.inf  config.h.unix.in  configure  configure.ac  gloox.cbp  gloox.dsp  gloox.mmp  gloox.vcproj
src/gloox-1.0/src/: .gitignore  client.cpp  clientbase.cpp
src/gloox-1.0/src/tests/: Makefile.am  Makefile.in
src/gloox-1.0/src/tests/adhoc/: Makefile.am  Makefile.in  adhoc_test.cpp
src/gloox-1.0/src/tests/adhoccommand/: Makefile.am  Makefile.in  adhoccommand_test.cpp
src/gloox-1.0/src/tests/adhoccommandnote/: Makefile.am  Makefile.in  adhoccommandnote_test.cpp
src/gloox-1.0/src/tests/amp/: Makefile.am  Makefile.in  amp_test.cpp
src/gloox-1.0/src/tests/amprule/: Makefile.am  Makefile.in  amprule_test.cpp
src/gloox-1.0/src/tests/base64/: Makefile.in  base64_test.cpp
src/gloox-1.0/src/tests/capabilities/: Makefile.am  Makefile.in  capabilities_test.cpp
src/gloox-1.0/src/tests/chatstatefilter/: Makefile.am  Makefile.in  chatstatefilter_test.cpp
src/gloox-1.0/src/tests/client/: Makefile.am  Makefile.in  client_test.cpp
src/gloox-1.0/src/tests/clientbase/: Makefile.am  Makefile.in  clientbase_test.cpp
src/gloox-1.0/src/tests/connectionbosh/: Makefile.in  connectionbosh_test.cpp
src/gloox-1.0/src/tests/dataform/: Makefile.in  dataform_test.cpp
src/gloox-1.0/src/tests/dataformfield/: Makefile.in  dataformfield_test.cpp
src/gloox-1.0/src/tests/dataformitem/: Makefile.in  dataformitem_test.cpp
src/gloox-1.0/src/tests/dataformreported/: Makefile.in  dataformreported_test.cpp
src/gloox-1.0/src/tests/delayeddelivery/: Makefile.in  delayeddelivery_test.cpp
src/gloox-1.0/src/tests/disco/: Makefile.in  disco_test.cpp
src/gloox-1.0/src/tests/discoinfo/: Makefile.am  Makefile.in  discoinfo_test.cpp
src/gloox-1.0/src/tests/discoitems/: Makefile.am  Makefile.in  discoitems_test.cpp
src/gloox-1.0/src/tests/error/: Makefile.in  error_test.cpp
src/gloox-1.0/src/tests/featureneg/: Makefile.am  Makefile.in  featureneg_test.cpp
src/gloox-1.0/src/tests/flexoffline/: Makefile.in  flexoffline_test.cpp
src/gloox-1.0/src/tests/flexofflineoffline/: Makefile.am  Makefile.in  flexofflineoffline_test.cpp
src/gloox-1.0/src/tests/gpgencrypted/: Makefile.in  gpgencrypted_test.cpp
src/gloox-1.0/src/tests/gpgsigned/: Makefile.in  gpgsigned_test.cpp
src/gloox-1.0/src/tests/inbandbytestream/: Makefile.am  Makefile.in  inbandbytestream_test.cpp
src/gloox-1.0/src/tests/inbandbytestreamibb/: Makefile.am  Makefile.in  inbandbytestreamibb_test.cpp
src/gloox-1.0/src/tests/iq/: Makefile.in  iq_test.cpp
src/gloox-1.0/src/tests/jid/: Makefile.in  jid_perf.cpp  jid_test.cpp
src/gloox-1.0/src/tests/lastactivity/: Makefile.in  lastactivity_test.cpp
src/gloox-1.0/src/tests/lastactivityquery/: Makefile.am  Makefile.in  lastactivityquery_test.cpp
src/gloox-1.0/src/tests/md5/: Makefile.in  md5_test.cpp
src/gloox-1.0/src/tests/message/: Makefile.in  message_test.cpp
src/gloox-1.0/src/tests/messageeventfilter/: Makefile.in  (+1 more)
src/include/: gloox
src/libstrophe/: Makefile.in  auth.c  common.h  configure  conn.c  ctx.c  handler.c  hash.c  snprintf.cpp  sock.c  stanza.c  tls_openssl.c
src/libstrophe/autom4te.cache/: output.1  requests  traces.0  traces.1
tests/: FacebookAgent.tests.R
(+98 files in other folders)
